注文表示の仕様変更

--- a/www/html/OrderDisplay/OD_dialog.html
+++ b/www/html/OrderDisplay/OD_dialog.html
@@ -3,6 +3,35 @@
 
   <div id="PM_addPE_Title" class="alert-dialog-title">個数選択画面</div>
   <ons-list>
+    <ons-list-header>調理担当人</ons-list-header>
+    <ons-carousel fullscreen swipeable auto-scroll overscrollable id="carousel">
+    <ons-carousel-item style="background-color: #ff8080;">
+      <div style="text-align: center; font-size: 20px; margin-top: 20px; color: #000000;">
+        <Strong>スタッフ1</Strong>
+      </div>
+    </ons-carousel-item>
+    <ons-carousel-item style="background-color: #ffff99;">
+      <div style="text-align: center; font-size: 20px; margin-top: 20px; color: #000000;">
+        <Strong>スタッフ2</Strong>
+      </div>
+    </ons-carousel-item>
+    <ons-carousel-item style="background-color: #bbff99;">
+      <div style="text-align: center; font-size: 20px; margin-top: 20px; color: #000000;">
+        <Strong>スタッフ3</Strong>
+      </div>
+    </ons-carousel-item>
+    <ons-carousel-item style="background-color: #99ffff;">
+      <div style="text-align: center; font-size: 20px; margin-top: 20px; color: #000000;">
+        <Strong>スタッフ4</Strong>
+      </div>
+    </ons-carousel-item>
+    <ons-carousel-item style="background-color: #b3ccff;">
+      <div style="text-align: center; font-size: 20px; margin-top: 20px; color: #000000;">
+        <Strong>スタッフ5</Strong>
+      </div>
+    </ons-carousel-item>
+  </ons-carousel>
+  </ons-list>
     <ons-list-header>商品個数の選択</ons-list-header>
     <ons-list-item modifier="nodivider">
       <div class="center">
