--- a/www/html/OrderDisplay/OD_main.html
+++ b/www/html/OrderDisplay/OD_main.html
@@ -1,6 +1,6 @@
 <!-- /html/OrderDisplay/OD_main.html -->
 <ons-page id="OD_main"  width="100%" height="100">
-
+<!-- <div class="background" style="background-color: #FFFFFF;"></div> -->
   <ons-toolbar>
     <div class="left">
       <ons-toolbar-button onclick="fn.open()">
@@ -19,12 +19,12 @@
   <!-- 商品管理テーブルの作成 --> 
   <table width="100%" id="OD_table">
     <tr>
-      <th bgcolor="#dcdcdc" class="OD_table1">座席</th>
-      <th bgcolor="#dcdcdc" class="OD_table2">商品名</th> 
-      <th bgcolor="#dcdcdc" class="OD_table3">個数</th> 
-      <th bgcolor="#dcdcdc" class="OD_table4"></th> 
-      <th bgcolor="#dcdcdc" class="OD_table5">状態</th>
-      <th bgcolor="#dcdcdc" class="OD_table6"></th>
+      <th bgcolor="#d69b58" class="OD_table1">座席</th>
+      <th bgcolor="#d69b58" class="OD_table2">商品名</th> 
+      <th bgcolor="#d69b58" class="OD_table3">個数</th> 
+      <th bgcolor="#d69b58" class="OD_table4"></th> 
+      <th bgcolor="#d69b58" class="OD_table5">状態</th>
+      <th bgcolor="#d69b58" class="OD_table6"></th>
     </tr>
 
   </table>
