--- a/www/html/OrderLog/OL_main.html
+++ b/www/html/OrderLog/OL_main.html
@@ -18,10 +18,10 @@
   <!-- 商品管理テーブルの作成 --> 
   <table width="100%" id="OL_table">
     <tr>
-      <th bgcolor="#dcdcdc" class="OL_table1">会計日時</th>
-      <th bgcolor="#dcdcdc" class="OL_table2">商品名</th> 
-      <th bgcolor="#dcdcdc" class="OL_table3">個数</th> 
-      <th bgcolor="#dcdcdc" class="OL_table4">金額</th> 
+      <th bgcolor="#d69b58" class="OL_table1">会計日時</th>
+      <th bgcolor="#d69b58" class="OL_table2">商品名</th> 
+      <th bgcolor="#d69b58" class="OL_table3">個数</th> 
+      <th bgcolor="#d69b58" class="OL_table4">金額</th> 
     </tr>
   </table>
 
