--- a/www/html/ProductManagement/PM_main.html
+++ b/www/html/ProductManagement/PM_main.html
@@ -14,10 +14,10 @@
   <!-- 商品管理テーブルの作成 --> 
   <table width="100%" id="PM_table">
     <tr>
-      <th bgcolor="#dcdcdc" class="PM_table1">厨房</th> 
-      <th bgcolor="#dcdcdc" class="PM_table2">在庫</th> 
-      <th bgcolor="#dcdcdc" class="PM_table3">商品名</th>
-      <th bgcolor="#dcdcdc" class="PM_table4">値段</th>
+      <th bgcolor="#d69b58" class="PM_table1">厨房</th> 
+      <th bgcolor="#d69b58" class="PM_table2">在庫</th> 
+      <th bgcolor="#d69b58" class="PM_table3">商品名</th>
+      <th bgcolor="#d69b58" class="PM_table4">値段</th>
     </tr>
   </table>
 
