--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,8 @@
   <script src="js/OrderLog/OL_main.js"></script>
   <script src="js/OrderLog/OL_dialog.js"></script>
 
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+
 	<link rel="stylesheet" href="css/Casher.css">
 	<link rel="stylesheet" href="css/ProductManagement.css">
 	<link rel="stylesheet" href="css/OrderDisplay.css">
