--- a/www/html/OrderLog/OL_dialog.html
+++ b/www/html/OrderLog/OL_dialog.html
@@ -19,7 +19,7 @@
 			<div id="OL_difTotal" style="width:100%; text-align: center"></div>
 		</div>
 		<div style="width:100%; padding: 5px; display: flex;flex-direction: row;flex-wrap: wrap;justify-content: space-around;">
-			<ons-button style="background: red;" onclick="hideDialog(&quot;OL_dialog&quot;)">キャンセル</ons-button>
-			<ons-button style="background: blue;" onclick="OL_pushEditedData()">　決　定　</ons-button>
+			<ons-button style="width: 130px; background: red; text-align: center;" onclick="hideDialog(&quot;OL_dialog&quot;)">キャンセル</ons-button>
+			<ons-button style="width: 130px; background: blue; text-align: center;" onclick="OL_pushEditedData()">決定</ons-button>
 		</div>
 </ons-alert-dialog>
