--- a/www/html/OrderDisplay/OD_dialog.html
+++ b/www/html/OrderDisplay/OD_dialog.html
@@ -35,15 +35,15 @@
     <ons-list-header>商品個数の選択</ons-list-header>
     <ons-list-item modifier="nodivider">
       <div class="center">
-        <ons-button id="OD_button_1" onclick="BeginLoading(), OD_selectNum(DBObj, this.id)">　　 1 　　</ons-button>
+        <ons-button id="OD_button_1" disabled="false" onclick="BeginLoading(), OD_selectNum(DBObj, this.id)">　　 1 　　</ons-button>
       </div>
       <div class="right">
-        <ons-button id="OD_button_2" onclick="BeginLoading(), OD_selectNum(DBObj, this.id)">　　 2 　　</ons-button>
+        <ons-button id="OD_button_2" disabled="false" onclick="BeginLoading(), OD_selectNum(DBObj, this.id)">　　 2 　　</ons-button>
       </div>
     </ons-list-item>
     <ons-list-item modifier="nodivider">
       <div class="center">
-        <ons-button id="OD_button_3" onclick="BeginLoading(), OD_selectNum(DBObj, this.id)">　　 3 　　</ons-button>
+        <ons-button id="OD_button_3" disabled="false" onclick="BeginLoading(), OD_selectNum(DBObj, this.id)">　　 3 　　</ons-button>
       </div>
       <div class="right">
         <ons-button id="OD_button_4" onclick="BeginLoading(), OD_selectNum(DBObj, this.id)">　　 4 　　</ons-button>
@@ -51,10 +51,10 @@
     </ons-list-item>
     <ons-list-item>
       <div class="center">
-        <ons-button id="OD_button_5" onclick="BeginLoading(), OD_selectNum(DBObj, this.id)">　　 5 　　</ons-button>
+        <ons-button id="OD_button_5" disabled="false" onclick="BeginLoading(), OD_selectNum(DBObj, this.id)">　　 5 　　</ons-button>
       </div>
       <div class="right">
-        <ons-button id="OD_button_6" onclick="BeginLoading(), OD_selectNum(DBObj, this.id)">　　 6 　　</ons-button>
+        <ons-button id="OD_button_6" disabled="false" onclick="BeginLoading(), OD_selectNum(DBObj, this.id)">　　 6 　　</ons-button>
       </div>
     </ons-list-item>
     <ons-list-header>キーボードによる個数入力</ons-list-header>
