--- a/www/html/OrderLog/OL_dialog.html
+++ b/www/html/OrderLog/OL_dialog.html
@@ -10,16 +10,16 @@
 		</ons-list-item>
 		<ons-list-header>注文商品情報</ons-list-header>
 		<div id="OL_goodsInfo" style="width: 100%;"></div>
+		<ons-list-header>合計金額情報</ons-list-header>
 		<div style="width: 100%; padding: 5px;">
 			<div style="width:100%; padding: 5px; display: flex;flex-direction: row;flex-wrap: wrap;justify-content: space-around;">
 				<div id="OL_previousTotal" style="text-align: right;"></div>
 				<div>→</div>
-				<div id="OL_currentTotal" style="text-align: right;"></div>
+				<strong id="OL_currentTotal" style="text-align: right; font-size: 1.2em;"></strong>
 			</div>
-			<div id="OL_difTotal" style="width:100%; text-align: center"></div>
 		</div>
 		<div style="width:100%; padding: 5px; display: flex;flex-direction: row;flex-wrap: wrap;justify-content: space-around;">
-			<ons-button style="width: 130px; background: red; text-align: center;" onclick="hideDialog(&quot;OL_dialog&quot;)">キャンセル</ons-button>
-			<ons-button style="width: 130px; background: blue; text-align: center;" onclick="OL_pushEditedData()">決定</ons-button>
+			<ons-button style="width: 30%; background: purple; text-align: center; font-size: 0.5em;" onclick="hideDialog(&quot;OL_dialog&quot;)">キャンセル</ons-button>
+			<ons-button style="width: 65%; background: red; text-align: center; margin-right: 10px;" onclick="OL_createAlertDialog()">決定</ons-button>
 		</div>
 </ons-alert-dialog>
