--- a/www/index.html
+++ b/www/index.html
@@ -23,6 +23,7 @@
   <script src="js/OrderDisplay/OD_dialog.js"></script>
   <script src="js/OrderLog/OL_main.js"></script>
   <script src="js/OrderLog/OL_dialog.js"></script>
+  <script src="js/OrderLog/OL_dialogDialog.js"></script>
 
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 
