--- a/www/html/OrderLog/OL_dialog.html
+++ b/www/html/OrderLog/OL_dialog.html
@@ -18,8 +18,11 @@
 				<strong id="OL_currentTotal" style="text-align: right; font-size: 1.2em;"></strong>
 			</div>
 		</div>
-		<div style="width:100%; padding: 5px; display: flex;flex-direction: row;flex-wrap: wrap;justify-content: space-around;">
-			<ons-button style="width: 30%; background: purple; text-align: center; font-size: 0.5em;" onclick="hideDialog(&quot;OL_dialog&quot;)">キャンセル</ons-button>
-			<ons-button style="width: 65%; background: red; text-align: center; margin-right: 10px;" onclick="OL_createAlertDialog()">決定</ons-button>
+	</ons-list>
+	<div class="alert-dialog-footer">
+		<div style="width:100%; display: flex;flex-direction: row;flex-wrap: wrap;justify-content: space-around;">
+			<ons-alert-dialog-button style="width: 30%; color: white; background: purple; text-align: center; font-size: 0.5em; border-radius: 0px 0px 0px 5px;" onclick="hideDialog(&quot;OL_dialog&quot;)">キャンセル</ons-alert-dialog-button>
+			<ons-alert-dialog-button style="width: 70%; color: white; background: red; text-align: center; border-radius: 0px 0px 5px 0px;" onclick="OL_createAlertDialog()">決定</ons-alert-dialog-button>
 		</div>
+	</div>
 </ons-alert-dialog>
