--- a/www/html/OrderLog/OL_dialogDialog.html
+++ b/www/html/OrderLog/OL_dialogDialog.html
@@ -2,10 +2,8 @@
 	<div class="alert-dialog-title">合計金額の確認</div>
 	<div id="OL_dialogDialogText" class="alert-dialog-content">
 	</div>
-	<div class="alert-dialog-footer">
-		<div style="width:100%; display: flex;flex-direction: row;flex-wrap: wrap;justify-content: space-around;">
-			<ons-alert-dialog-button style="width: 30%; color: white; background: purple; text-align: center; font-size: 0.5em; border-radius: 0px 0px 0px 5px;" onclick="OL_hideAlertDialog()">キャンセル</ons-alert-dialog-button>
-			<ons-alert-dialog-button style="width: 70%; color: white; background: red; text-align: center; border-radius: 0px 0px 5px 0px;" onclick="OL_hideAlertDialog(true)">決定</ons-alert-dialog-button>
-		</div>
+	<div style="width:100%; padding-bottom: 5px; display: flex;flex-direction: row;flex-wrap: wrap;justify-content: space-around;">
+		<ons-button style="width: 30%; color: white; background: purple; text-align: center; font-size: 0.5em;" onclick="OL_hideAlertDialog()">キャンセル</ons-button>
+		<ons-button style="width: 65%; color: white; background: red; text-align: center;" onclick="OL_hideAlertDialog(true)">決定</ons-button>
 	</div>
 </ons-alert-dialog>
