✨[sidebar] レジ側と厨房側でサイドバーが変わる
CA_main でボタンはみだしがなくなった
OL_dialog で金額表示が変わった

--- a/www/html/Home/Home.html
+++ b/www/html/Home/Home.html
@@ -1,21 +1,62 @@
 <ons-page id="Home" class="hero" style="height: 100%;">
-  <ons-toolbar>
-    <div class="left">
-      <ons-toolbar-button onclick="fn.open()">
-        <ons-icon icon="ion-ios-menu, material:md-menu"></ons-icon>
-      </ons-toolbar-button>
-    </div>
-    <div class="center">
-      Home
-    </div>  
-  </ons-toolbar>
-  <div class="background"></div>
-  <img src="/image/RKS.png" class="title">
-  <ons-row>
-    <div class="container">
-      <input type="image" class="image" src="image/CasherButton.png" onclick="fn.load('html/Casher/CA_main.html')">
-      <span style="margin-right: 2em;"></span>
-      <input type="image" class="image" src="image/GalleyButton.png" onclick="fn.load('html/OrderDisplay/OD_main.html')">
-    </div>
-  </ons-row>
+	<ons-toolbar>
+		<div class="left">
+			<ons-toolbar-button onclick="fn.open()">
+				<ons-icon icon="ion-ios-menu, material:md-menu"></ons-icon>
+			</ons-toolbar-button>
+		</div>
+		<div class="center">
+			Home
+		</div>
+	</ons-toolbar>
+	<div class="background"></div>
+	<img src="/image/RKS.png" class="title">
+	<ons-row>
+		<div class="container">
+			<input type="image" class="image" src="image/CasherButton.png" onclick="fn.load('html/Casher/CA_main.html')">
+			<span style="margin-right: 2em;"></span>
+			<input type="image" class="image" src="image/GalleyButton.png" onclick="fn.load('html/OrderDisplay/OD_main.html')">
+		</div>
+	</ons-row>
 </ons-page>
+<!-- <ons-list>
+	<ons-list-item>
+		<div class=left><img class=list-item__thumbnail src=i mage/RKS_ic.png></div>
+		<div class=center><strong>RKかたつむり</strong></div>
+	</ons-list-item>
+	<ons-list-item class=coler_back_red style=color:white;>
+		<div class=left><img class=list-item__thumbnail src=image/Rezi.png></div>
+		<div class=center><strong>会計モード</strong></div>
+	</ons-list-item>
+	<ons-list-item onclick=fn.load('html/Home/Home.html') modifier=chevron tappable>
+		<div class=left><img class=list-item__thumbnail src=i mage/Home.png></div>
+		<div class=center>Home</div>
+	</ons-list-item>
+	<ons-list-item onclick=fn.load('html/Casher/CA_main.html') modifier=chevron tappable>
+		<div class=left><img class=list-item__thumbnail src=image/Casher.png></div>
+		<div class=center>会計</div>
+	</ons-list-item>
+	<ons-list-item onclick=fn.load( 'html/ProductManagement/PM_main.html') modifier=chevron tappable>
+		<div class=left><img class=l ist-item__thumbnail src=image/ProductManagement.png></div>
+		<div class=center>商品管理</div>
+	</ons-list-item>
+	<ons-list-item onclick=fn.load( 'html/OrderLog/OL_main.html') modifier=chevron tappable>
+		<div class=left><img class=list-item__thumbnail src=image/OrderLog.png></div>
+		<div class=center>商品履歴</div>
+	</ons-list-item>
+</ons-list>
+<ons-button onclick=fn.load('html/Home/Home.html')>厨房モード</ons-button> -->
+<!-- <ons-list>
+	<ons-list-item>
+		<div class=left><img class=list-item__thumbnail src=image/RKS_ic.png></div>
+		<div class=center><strong>RKかたつむり</strong></div>
+	</ons-list-item>
+	<ons-list-item class=coler_back_red style=color:white;>
+		<div class=left><img class=list-item__thumbnail src=image/Rezi.png></div>
+		<div class=center><strong>厨房モード</strong></div>
+		<ons-list-item onclick=fn.load('html/OrderDisplay/OD_main.html') modifier=chevron tappable>
+			<div class=left><img class=list-item__thumbnail src=image/Galley.png></div>
+			<div class=center>注文表示</div>
+		</ons-list-item>
+</ons-list>
+<ons-button onclick=fn.load('html/Home/Home.html')>会計モード</ons-button> -->
