--- a/www/html/OrderLog/OL_dialogDialog.html
+++ b/www/html/OrderLog/OL_dialogDialog.html
@@ -1,7 +1,7 @@
 <ons-alert-dialog id="OL_dialogDialog" cancelable animation="none">
 	<div class="alert-dialog-title">合計金額の確認</div>
-	<div id="OL_dialogDialogText" class="alert-dialog-content">
-	</div>
+	<p id="OL_dialogDialogText">
+	</p>
 	<div style="width:100%; padding-bottom: 5px; display: flex;flex-direction: row;flex-wrap: wrap;justify-content: space-around;">
 		<ons-button style="width: 30%; color: white; background: purple; text-align: center; font-size: 0.5em;" onclick="OL_hideAlertDialog()">キャンセル</ons-button>
 		<ons-button style="width: 65%; color: white; background: red; text-align: center;" onclick="OL_hideAlertDialog(true)">決定</ons-button>
