--- a/www/index.html
+++ b/www/index.html
@@ -40,9 +40,9 @@
 
 <body style="height: 100%;">
 	<!DOCTYPE HTML>
-	<ons-splitter>
+	<ons-splitter id="menubase">
 		<ons-splitter-side id="menu" side="left" width="220px" collapse swipeable>
-			<ons-page>
+			<!-- <ons-page>
 				<ons-list>
           <ons-list-item>
             <div class="left">
@@ -106,7 +106,7 @@
 					</ons-list-item>
 				</ons-list>
         <ons-button>厨房モード</ons-button>
-			</ons-page>
+			</ons-page> -->
 		</ons-splitter-side>
 		<ons-splitter-content id="content" page="html/Home/Home.html">
 			<!-- この中にons-pageで画面を作るかpageにidをいれる -->
