--- a/www/html/OrderDisplay/OD_dialog.html
+++ b/www/html/OrderDisplay/OD_dialog.html
@@ -61,7 +61,7 @@
     <ons-list-item >
       <input type="number" id="OD_textbox" class="text-input" placeholder="個数">
       <div class="right">
-        <ons-button onclick="BeginLoading(), OD_selectNum(DBObj, 'OD_textbox_1')" class="coler_back_red">決定</ons-button>
+        <ons-button onclick="OD_selectNum(DBObj, 'OD_textbox_1')" class="coler_back_red">決定</ons-button>
       </div>
     </ons-list-item>
 
